--- a/app/views/main/dashboard.html.erb
+++ b/app/views/main/dashboard.html.erb
@@ -1,2 +1,3 @@
-<h1>Main#dashboard</h1>
-<p>Find me in app/views/main/dashboard.html.erb</p>
+<%= render partial: 'icon', locals: { text: current_user.email, width: '10.5rem' } %>
+
+<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
